--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -1,9 +1,14 @@
 <ion-header no-border>
   <ion-toolbar mode="ios">
     <ion-buttons mode="md" slot="start">
-      <ion-back-button mode="md" text="" icon="ios-arrow-back" color="dark"></ion-back-button>
+      <!--ion-back-button mode="md" text="Back" color="dark"></!--ion-back-button-->
+      <ion-button (click)="onClick()" fill="clear">
+        Atras
+      </ion-button>
     </ion-buttons>
-        
+
+    <ion-title>Event clendar</ion-title>
+
     <ion-buttons mode="md" slot="end">
       <button class="btn_menu">
         <div class="div_linea_color div_line_menu"></div>
@@ -16,11 +21,7 @@
 
 <ion-content>
   <ion-grid class="padding_cero">
-    <ion-row class="ion-padding-start ion-padding-end">      
-        <ion-col size="12" text-center>
-            <h1 class="color_65_titulos">Dircetur Cusco</h1>
-            <p class="event_color">Event clendar</p>
-        </ion-col>
+    <ion-row class="ion-padding-start ion-margin-top ion-padding-end">      
         <ion-col size="12" id="subir_mesyear">
           <ion-row>
             <ion-col size="2" text-center class="ion-margin-bottom">
@@ -29,7 +30,7 @@
               </button>
             </ion-col>
             <ion-col size="8" text-center class="ion-margin-bottom">
-              <p id="diciembre_year"><span id="mes_color">{{ get_current_date_format ("MMMM") }}, </span><span id="year_number">{{ get_current_date_format ("YYYY") }}</span></p>
+              <p id="diciembre_year"><span id="mes_color">{{ get_current_date_format ("MMM") }}, </span><span id="year_number">{{ get_current_date_format ("YYYY") }}</span></p>
             </ion-col>
             <ion-col size="2" text-center class="ion-margin-bottom">
               <button class="flechas_tamaño_calender padding_cero" (click)="change_month (+1)">
@@ -58,7 +59,7 @@
                     <ion-col size="12" class="padding_derecha_izquierda largo_eventos">
                       <p class="titulo_calnedar">{{ item.datageneral.titulo }}</p>
                       <p class="subtitulo_calendar">{{ item.datageneral.categoria?.name }}</p>
-                      <!--p class="lugar_img">{{ item.datageneral.provincia.nombre }}</!p-->
+                      <p class="quitar_margin margin_bottom"><span><img src="/assets/img/icono-img1.png" id="margin_left_img"></span><span class="color_81_pau">{{ item.datageneral.provincia.nombre }}</span></p>
                     </ion-col>
                   </ion-row>
                 </ion-col>
