--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -108,7 +108,7 @@
                     <ion-col size="12" class="padding_derecha_izquierda largo_eventos">
                       <p class="titulo_calnedar">{{ item.datageneral.titulo }}</p>
                       <p class="subtitulo_calendar">{{ item.datageneral.categoria?.name }}</p>
-                      <!--p class="lugar_img">{{ item.datageneral.provincia.nombre }}</!p-->
+                      <p class="quitar_margin margin_bottom"><span><img src="/assets/img/icono-img1.png" id="margin_left_img"></span><span class="color_81_pau">{{ item.datageneral.provincia.nombre }}</span></p>
                     </ion-col>
                   </ion-row>
                 </ion-col>
@@ -133,122 +133,55 @@
     <ion-row class="ion-padding-start ion-padding-end margin_bottom_new">
       <ion-col size="12" text-center>
         <h2 class="color_65_titulos">Turistical circuites in Cusco</h2>
-    </ion-col>
-    <ion-col size="12">
-      <ion-row>
-        <ion-col size="12" size-md="6" size-xl="4">
-          <ion-card>
-            <ion-card-content>
-              <ion-row>
-                <ion-col size="12" class="dercha_izquierda_cero">
-                  <ion-row>
-                    <ion-col size="4">
-                      <img src="assets/img/4a09bc9f9c00c41bac61c8856ac05a6c.png" width="100%">
-                    </ion-col>
-                    <ion-col size="8">
-                      <h2 class="titulo_card margin_bottom">Agro Artesanias Chichubamba</h2>
-                      <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
-                      <p class="numero_color">2,820 m.s.n.m</p>
-                    </ion-col>
-                  </ion-row>
-                </ion-col>
-                <ion-col size="12" class="dercha_izquierda_cero">
-                  <ion-row>
-                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                      <button class="btn_rojo_car">Alimentacion</button>
-                    </ion-col>
-                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                      <button class="btn_rojo_car">Ceramica</button>
-                    </ion-col>
-                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                      <button class="btn_rojo_car">Crianza de cuy</button>
-                    </ion-col>
-                  </ion-row>
-                </ion-col>
-                <ion-col size="12">
-                  <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-                </ion-col>
-              </ion-row>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-        <ion-col size="12" size-md="6" size-xl="4">
-          <ion-card>
-            <ion-card-content>
-              <ion-row>
-                <ion-col size="12" class="dercha_izquierda_cero">
-                  <ion-row>
-                    <ion-col size="4">
-                      <img src="assets/img/4a09bc9f9c00c41bac61c8856ac05a6c.png" width="100%">
-                    </ion-col>
-                    <ion-col size="8">
-                      <h2 class="titulo_card margin_bottom">Agro Artesanias Chichubamba</h2>
-                      <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
-                      <p class="numero_color">2,820 m.s.n.m</p>
-                    </ion-col>
-                  </ion-row>
-                </ion-col>
-                <ion-col size="12" class="dercha_izquierda_cero">
-                  <ion-row>
-                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                      <button class="btn_rojo_car">Alimentacion</button>
-                    </ion-col>
-                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                      <button class="btn_rojo_car">Ceramica</button>
-                    </ion-col>
-                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                      <button class="btn_rojo_car">Crianza de cuy</button>
-                    </ion-col>
-                  </ion-row>
-                </ion-col>
-                <ion-col size="12">
-                  <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-                </ion-col>
-              </ion-row>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-        <ion-col size="12" size-md="6" size-xl="4">
-          <ion-card>
-            <ion-card-content>
-              <ion-row>
-                <ion-col size="12" class="dercha_izquierda_cero">
-                  <ion-row>
-                    <ion-col size="4">
-                      <img src="assets/img/4a09bc9f9c00c41bac61c8856ac05a6c.png" width="100%">
-                    </ion-col>
-                    <ion-col size="8">
-                      <h2 class="titulo_card margin_bottom">Agro Artesanias Chichubamba</h2>
-                      <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
-                      <p class="numero_color">2,820 m.s.n.m</p>
-                    </ion-col>
-                  </ion-row>
-                </ion-col>
-                <ion-col size="12" class="dercha_izquierda_cero">
-                  <ion-row>
-                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                      <button class="btn_rojo_car">Alimentacion</button>
-                    </ion-col>
-                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                      <button class="btn_rojo_car">Ceramica</button>
-                    </ion-col>
-                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                      <button class="btn_rojo_car">Crianza de cuy</button>
-                    </ion-col>
-                  </ion-row>
-                </ion-col>
-                <ion-col size="12">
-                  <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-                </ion-col>
-              </ion-row>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-col>
-    <ion-col size="10" size-sm="6" offset="1" offset-sm="3" text-center>
-      <button class="btn_blanco_calendario">Show full calendar</button>
-    </ion-col>
+      </ion-col>
+
+      <ion-col *ngIf="is_circuitos_loading === true" size="12">
+        <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
+      </ion-col>
+
+      <ion-col size="12" *ngIf="is_circuitos_loading === false">
+        <ion-row>
+          <ion-col *ngFor="let item of circuitos" size="12" size-md="6" size-xl="4">
+            <ion-card>
+              <ion-card-content>
+                <ion-row>
+                  <ion-col size="12" class="dercha_izquierda_cero">
+                    <ion-row>
+                      <ion-col size="4">
+                        <img [src]="item.imagen" width="100%">
+                      </ion-col>
+                      <ion-col size="8">
+                        <h2 class="titulo_card margin_bottom">{{ item.nombre }}</h2>
+                        <p class="descrip_pequeña margin_bottom">{{ item.donde }}</p>
+                        <p class="numero_color">{{ item.altitud }}</p>
+                      </ion-col>
+                    </ion-row>
+                  </ion-col>
+                  <ion-col size="12" class="dercha_izquierda_cero">
+                    <ion-row>
+                      <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                        <button class="btn_rojo_car">Alimentacion</button>
+                      </ion-col>
+                      <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                        <button class="btn_rojo_car">Ceramica</button>
+                      </ion-col>
+                      <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                        <button class="btn_rojo_car">Crianza de cuy</button>
+                      </ion-col>
+                    </ion-row>
+                  </ion-col>
+                  <ion-col size="12">
+                    <p class="descripcion_completo">{{ item.descripcion }}</p>
+                  </ion-col>
+                </ion-row>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-col>
+      <ion-col size="10" size-sm="6" offset="1" offset-sm="3" text-center>
+        <button class="btn_blanco_calendario" (click)="go_circuitos ()">Show full turistical circuites</button>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
