--- a/src/app/turismo-circuito/turismo-circuito.page.html
+++ b/src/app/turismo-circuito/turismo-circuito.page.html
@@ -23,21 +23,26 @@
         <h1 class="titulo_art ion-text-lg-center">Turistical circuites in Cusco</h1>
         <p class="descrip_color">La Dirección de Artesanía, es un Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
       </ion-col>
-      <ion-col size="12">
+
+      <ion-col *ngIf="is_loading === true" size="12">
+        <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
+      </ion-col>
+
+      <ion-col *ngIf="is_loading === false" size="12">
         <ion-row>
-          <ion-col size="12" size-md="6" size-xl="4">
+          <ion-col *ngFor="let item of items" size="12" size-md="6" size-xl="4">
             <ion-card>
               <ion-card-content>
                 <ion-row>
                   <ion-col size="12" class="dercha_izquierda_cero">
                     <ion-row>
                       <ion-col size="4">
-                        <img src="assets/img/4a09bc9f9c00c41bac61c8856ac05a6c.png" width="100%">
+                        <img [src]="item.imagen" width="100%">
                       </ion-col>
                       <ion-col size="8">
-                        <h2 class="titulo_card margin_bottom">Agro Artesanias Chichubamba</h2>
-                        <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
-                        <p class="numero_color">2,820 m.s.n.m</p>
+                        <h2 class="titulo_card margin_bottom">{{ item.nombre }}</h2>
+                        <p class="descrip_pequeña margin_bottom">{{ item.donde }}</p>
+                        <p class="numero_color">{{ item.altitud }}</p>
                       </ion-col>
                     </ion-row>
                   </ion-col>
@@ -55,79 +60,7 @@
                     </ion-row>
                   </ion-col>
                   <ion-col size="12">
-                    <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-                  </ion-col>
-                </ion-row>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-          <ion-col size="12" size-md="6" size-xl="4">
-            <ion-card>
-              <ion-card-content>
-                <ion-row>
-                  <ion-col size="12" class="dercha_izquierda_cero">
-                    <ion-row>
-                      <ion-col size="4">
-                        <img src="assets/img/4a09bc9f9c00c41bac61c8856ac05a6c.png" width="100%">
-                      </ion-col>
-                      <ion-col size="8">
-                        <h2 class="titulo_card margin_bottom">Agro Artesanias Chichubamba</h2>
-                        <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
-                        <p class="numero_color">2,820 m.s.n.m</p>
-                      </ion-col>
-                    </ion-row>
-                  </ion-col>
-                  <ion-col size="12" class="dercha_izquierda_cero">
-                    <ion-row>
-                      <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                        <button class="btn_rojo_car">Alimentacion</button>
-                      </ion-col>
-                      <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                        <button class="btn_rojo_car">Ceramica</button>
-                      </ion-col>
-                      <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                        <button class="btn_rojo_car">Crianza de cuy</button>
-                      </ion-col>
-                    </ion-row>
-                  </ion-col>
-                  <ion-col size="12">
-                    <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-                  </ion-col>
-                </ion-row>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-          <ion-col size="12" size-md="6" size-xl="4">
-            <ion-card>
-              <ion-card-content>
-                <ion-row>
-                  <ion-col size="12" class="dercha_izquierda_cero">
-                    <ion-row>
-                      <ion-col size="4">
-                        <img src="assets/img/4a09bc9f9c00c41bac61c8856ac05a6c.png" width="100%">
-                      </ion-col>
-                      <ion-col size="8">
-                        <h2 class="titulo_card margin_bottom">Agro Artesanias Chichubamba</h2>
-                        <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
-                        <p class="numero_color">2,820 m.s.n.m</p>
-                      </ion-col>
-                    </ion-row>
-                  </ion-col>
-                  <ion-col size="12" class="dercha_izquierda_cero">
-                    <ion-row>
-                      <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                        <button class="btn_rojo_car">Alimentacion</button>
-                      </ion-col>
-                      <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                        <button class="btn_rojo_car">Ceramica</button>
-                      </ion-col>
-                      <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
-                        <button class="btn_rojo_car">Crianza de cuy</button>
-                      </ion-col>
-                    </ion-row>
-                  </ion-col>
-                  <ion-col size="12">
-                    <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
+                    <p class="descripcion_completo">{{ item.descripcion }}</p>
                   </ion-col>
                 </ion-row>
               </ion-card-content>
