--- a/src/app/circuito-detalle/circuito-detalle.page.scss
+++ b/src/app/circuito-detalle/circuito-detalle.page.scss
@@ -26,6 +26,11 @@
     font-weight: 900;
     font-size: 22px;
 }
+.titulo_art{
+    color: #656565;
+    font-weight: 900;
+    font-size: 22px;
+}
 @media(min-width: 360px){
     .titulo_art{
         font-size: 25px;
@@ -62,30 +67,10 @@
         padding-right: 25px;
     }
 }
-.descrip_color{
-    color: #818181;
-    line-height: 1.3;
-}
-ion-card{
-    margin: 0;
-}
-.dercha_izquierda_cero{
-    padding-left: 0px;
-    padding-right: 0px;
-}
-.titulo_card{
-    color: #656565;
-    font-weight: 900;
-    font-size: 14px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-}
 .descrip_pequeña{
     color: #818181;
     font-weight: 100;   
-    font-size: 11px;
+    font-size: 15px;
     line-height: 1.2;
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -98,8 +83,9 @@ ion-card{
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    font-size: 10px;
+    font-size: 13px;
     font-weight: 900;
+    color: #818181;
 }
 .margin_bottom{
     margin-bottom: 3px;
@@ -125,13 +111,10 @@ ion-card{
         font-size: 16px;
     }
     .descrip_pequeña{
-        font-size: 12px;
+        font-size: 17px;
     }
     .numero_color{
-        font-size: 12px;
-    }
-    .margin_bottom{
-        margin-bottom: 5px;
+        font-size: 15px;
     }
     .btn_rojo_car{
         font-size: 11px;
@@ -142,13 +125,10 @@ ion-card{
         font-size: 18px;
     }
     .descrip_pequeña{
-        font-size: 14px;
+        font-size: 19px;
     }
     .numero_color{
-        font-size: 14px;
-    }
-    .margin_bottom{
-        margin-bottom: 7px;
+        font-size: 16px;
     }
     .btn_rojo_car{
         font-size: 13px;
@@ -159,13 +139,10 @@ ion-card{
         font-size: 21px;
     }
     .descrip_pequeña{
-        font-size: 13px;
+        font-size: 18px;
     }
     .numero_color{
-        font-size: 12px;
-    }
-    .margin_bottom{
-        margin-bottom: 10px;
+        font-size: 15px;
     }
     .btn_rojo_car{
         font-size: 13px;
@@ -181,9 +158,6 @@ ion-card{
     .numero_color{
         font-size: 16px;
     }
-    .margin_bottom{
-        margin-bottom: 22px;
-    }
     .btn_rojo_car{
         font-size: 13px;
         border-radius: 15px;
@@ -194,16 +168,13 @@ ion-card{
         font-size: 17px;
     }
     .descrip_pequeña{
-        font-size: 13px;
+        font-size: 17px;
     }
     .numero_color{
-        font-size: 12px;
-    }
-    .margin_bottom{
-        margin-bottom: 6px;
+        font-size: 15px;
     }
     .btn_rojo_car{
-        font-size: 11px;
+        font-size: 16px;
         border-radius: 15px;
     }
 }
@@ -217,9 +188,6 @@ ion-card{
     .numero_color{
         font-size: 14px;
     }
-    .margin_bottom{
-        margin-bottom: 13px;
-    }
     .btn_rojo_car{
         font-size: 13px;
         border-radius: 15px;
@@ -230,29 +198,69 @@ ion-card{
         font-size: 21px;
     }
     .descrip_pequeña{
-        font-size: 15px;
+        font-size: 16px;
     }
     .numero_color{
-        font-size: 12px;
-    }
-    .margin_bottom{
-        margin-bottom: 9px;
+        font-size: 14px;
     }
     .btn_rojo_car{
         font-size: 13px;
         border-radius: 15px;
     }
 }
-ion-card-content{
-    padding-left: 10px;
-    padding-right: 10px;
-}
 .descripcion_completo{
     color: #818181;
     font-weight: 100;
-    line-height:1.3;
+    line-height: 1.3;
+
 }
-button:focus{
-    outline:none;
-    box-shadow:none;
+.color_dia{
+    color: #818181;
+    font-weight: bolder;
+    font-size: 16px;
+}
+ion-item{
+    --background: #3E729A;
+    --color: #ffffff;
+    font-size: 14px;
+}
+.color_detalle{
+    color: #818181;
+    padding-left: 5px;
+    padding-right: 5px;
+    line-height: 1.3;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    font-size: 14px;
+}
+@media(min-width: 480px){
+    ion-item{
+        font-size: 18px;
+    }
+    .color_detalle{
+        font-size: 16px;
+    }
+}
+@media(min-width: 768px){
+    ion-item{
+        font-size: 20px;
+    }
+    .color_dia{
+        font-size: 21px;
+    }
+}
+.padding_derecha_izquierda_foto{
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 4px;
+}
+.descripn_largo{
+    color: #818181;
+    font-weight: 100;
+    line-height: 1.3;
+}
+.padding_derecha_cero{
+    padding-left: 0px;
 }
