--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -142,7 +142,7 @@
       <ion-col size="12" *ngIf="is_circuitos_loading === false">
         <ion-row>
           <ion-col *ngFor="let item of circuitos" size="12" size-md="6" size-xl="4">
-            <ion-card>
+            <ion-card (click)="view_circuito_detalle (item)">
               <ion-card-content>
                 <ion-row>
                   <ion-col size="12" class="dercha_izquierda_cero">
