--- a/src/app/circuito-detalle/circuito-detalle.page.html
+++ b/src/app/circuito-detalle/circuito-detalle.page.html
@@ -18,73 +18,65 @@
         </button>
       </ion-col>
     </ion-row>
-    <ion-row>
-        <ion-col size="12" class="padding_espacio_descrip">
-          <h1 class="titulo_art ion-text-lg-center">Este es el nombre de la ruta</h1>
-          <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
-          <p class="numero_color">2,820 m.s.n.m</p>
-        </ion-col>
-        <ion-col size="12" class="padding_espacio_descrip">
-          <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-        </ion-col>
-        <ion-col size="12" class="padding_espacio_descrip">
-          <ion-row>
-            <ion-col size="4" size-sm="3" size-md="3" size-lg="2" class="padding_derecha_cero">
-              <button class="btn_rojo_car">Alimentacion</button>
-            </ion-col>
-            <ion-col size="4" size-sm="3" size-md="3" size-lg="2" class="padding_derecha_cero">
-              <button class="btn_rojo_car">Ceramica</button>
-            </ion-col>
-            <ion-col size="4" size-sm="3" size-md="3" size-lg="2" class="padding_derecha_cero">
-              <button class="btn_rojo_car">Crianza de cuy</button>
-            </ion-col>
-          </ion-row>
-        </ion-col>
-        <ion-col size="12" class="ion-no-padding">
-          <ion-img :src="assets/img/detalle_1.png"></ion-img>
-        </ion-col>
-        <ion-col size="12" class="padding_espacio_descrip">
-          <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
-        </ion-col>
+
+    <ion-row *ngIf="is_loading === true">
+      <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
     </ion-row>
+
+    <ion-row *ngIf="is_loading === false">
+      <ion-col size="12" class="padding_espacio_descrip">
+        <h1 class="titulo_art ion-text-lg-center">{{ data?.items }}</h1>
+        <p class="descrip_pequeña margin_bottom">{{ data?.donde }}</p>
+        <p class="numero_color">{{ data?.altitud }}</p>
+      </ion-col>
+      <ion-col size="12" class="padding_espacio_descrip">
+        <p class="descripcion_completo">{{ data?.descripcion }}</p>
+      </ion-col>
+      <ion-col size="12" class="padding_espacio_descrip">
+        <ion-row>
+          <ion-col size="4" size-sm="3" size-md="3" size-lg="2" class="padding_derecha_cero">
+            <button class="btn_rojo_car">Alimentacion</button>
+          </ion-col>
+          <ion-col size="4" size-sm="3" size-md="3" size-lg="2" class="padding_derecha_cero">
+            <button class="btn_rojo_car">Ceramica</button>
+          </ion-col>
+          <ion-col size="4" size-sm="3" size-md="3" size-lg="2" class="padding_derecha_cero">
+            <button class="btn_rojo_car">Crianza de cuy</button>
+          </ion-col>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+
     <ion-row>
-      <ion-col isze="12" class="ion-text-center padding_espacio_descrip">
+      <ion-col size="12" class="ion-text-center padding_espacio_descrip">
         <ion-text>
           <h2 class="titulo_art">Itinerario</h2>
         </ion-text>
       </ion-col>
-      <ion-col size="12" class="padding_espacio_descrip">
-        <ion-list>
+
+      <ion-col size="12" *ngIf="is_items_loading === true">
+        <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
+      </ion-col>
+
+      <ion-col size="12" *ngIf="is_items_loading === false" class="padding_espacio_descrip">
+        <ion-list *ngFor="let item of items">
           <ion-list-header style="padding-left: 0px;">
-            <ion-label class="color_dia">Dia 1</ion-label>
+            <ion-label class="color_dia">{{ item.nombre }}</ion-label>
           </ion-list-header>
-          <div>
-            <ion-item line="none">INTELIGENCIA DE MERCADOS</ion-item>
-            <p class="color_detalle">Estadísticas de Comercio Exterior: Reportes nacionales e internacionales de exportación e importación.</p>
-          </div>
-          <div>
-            <ion-item line="none">INTELIGENCIA DE MERCADOS</ion-item>
-            <p class="color_detalle">Estadísticas de Comercio Exterior: Reportes nacionales e internacionales de exportación e importación.</p>
+          <div *ngFor="let actividad of item.actividades">
+            <ion-item line="none" (click)="view_item (actividad)">
+              {{ actividad.nombre }}
+              <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': actividad.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
+            </ion-item>
+            <p *ngIf="actividad.reveal_child" class="color_detalle" [@animation-top]>
+              {{ actividad.detalle }}
+            </p>
           </div>
         </ion-list>
       </ion-col>
-      <ion-col size="12" class="padding_espacio_descrip">
-        <ion-list>
-          <ion-list-header style="padding-left: 0px;">
-            <ion-label class="color_dia">Dia 2</ion-label>
-          </ion-list-header>
-          <div>
-            <ion-item line="none">INTELIGENCIA DE MERCADOS</ion-item>
-            <p class="color_detalle">Estadísticas de Comercio Exterior: Reportes nacionales e internacionales de exportación e importación.</p>
-          </div>
-          <div>
-            <ion-item line="none">INTELIGENCIA DE MERCADOS</ion-item>
-            <p class="color_detalle">Estadísticas de Comercio Exterior: Reportes nacionales e internacionales de exportación e importación.</p>
-          </div>
-        </ion-list>
-      </ion-col>
+
       <ion-col size="12" class="ion-no-padding">
-        <ion-row>
+        <ion-row class="ion-margin-top">
           <ion-col size="4" class="padding_derecha_izquierda_foto">
             <ion-img :src="assets/img/3e7ab869874850d162983f3c0674485d.png"></ion-img>
           </ion-col>
@@ -105,17 +97,25 @@
           </ion-col>
         </ion-row>
       </ion-col>
+
       <ion-col size="12" class="padding_espacio_descrip">
         <ion-text>
           <h2 class="titulo_art ion-text-center">Itinerario</h2>
         </ion-text>
-        <p class="descripn_largo">Recogida en el hotel y traslado de regreso al centro de Cusco. Guía en español. Transporte en minibús. Entrada a la Montaña de Colores. Desayuno y almuerzo tipo buffet. Bastones para trekking. Oxígeno de emergencia y equipo de primeros auxilios.</p>
+
+        <ion-spinner *ngIf="is_loading === true" style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
+
+        <p *ngIf="is_loading === false" class="descripn_largo">{{ data?.incluye }}</p>
       </ion-col>
+
       <ion-col size="12" class="padding_espacio_descrip">
         <ion-text>
           <h2 class="titulo_art ion-text-center">No incluye</h2>
         </ion-text>
-        <p class="descripn_largo">Recogida en el hotel y traslado de regreso al centro de Cusco. Guía en español. Transporte en minibús. Entrada a la Montaña de Colores. Desayuno y almuerzo tipo buffet. Bastones para trekking. Oxígeno de emergencia y equipo de primeros auxilios.</p>
+
+        <ion-spinner *ngIf="is_loading === true" style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
+
+        <p *ngIf="is_loading === false" class="descripn_largo">{{ data?.no_incluye }}</p>
       </ion-col>
     </ion-row>
   </ion-grid>
