--- a/src/app/circuito-detalle/circuito-detalle.page.scss
+++ b/src/app/circuito-detalle/circuito-detalle.page.scss
@@ -2,6 +2,12 @@
     padding-left: 1rem;
     padding-right: 1rem;
 }
+
+.transition {
+    color: #ffffff;
+    transition: all 240ms ease-in-out;
+}
+
 .btn_menu{
     width: 25px;
     height: 25px;
