--- a/src/app/trc-detalle/trc-detalle.page.html
+++ b/src/app/trc-detalle/trc-detalle.page.html
@@ -18,14 +18,20 @@
         </button>
       </ion-col>
     </ion-row>
-    <ion-row>
+
+    <div *ngIf="is_loading === true">
+      <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
+    </div>
+
+    <div *ngIf="is_loading === false">
+      <ion-row>
         <ion-col size="12" class="padding_espacio_descrip">
-          <h1 class="titulo_art ion-text-lg-center">Este es el nombre de la ruta</h1>
-          <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
-          <p class="numero_color">2,820 m.s.n.m</p>
+          <h1 class="titulo_art ion-text-lg-center">{{ data?.nombre }}</h1>
+          <p class="descrip_pequeña margin_bottom">{{ data?.donde }}</p>
+          <p class="numero_color">{{ data?.altitud }}</p>
         </ion-col>
         <ion-col size="12" class="padding_espacio_descrip">
-          <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
+          <p class="descripcion_completo">{{ data?.descripcion }}</p>
         </ion-col>
         <ion-col size="12" class="padding_espacio_descrip">
           <ion-row>
@@ -40,91 +46,74 @@
             </ion-col>
           </ion-row>
         </ion-col>
+      </ion-row>
+  
+      <ion-row>
+        <ion-col isze="12" class="ion-text-center padding_espacio_descrip">
+          <ion-text>
+            <h2 class="titulo_art">Distancia</h2>
+          </ion-text>
+        </ion-col>
+  
+        <ion-col size="12" class="padding_espacio_descrip">
+          <p class="descripcion_completo">{{ data?.distancia }}</p>
+        </ion-col>
+        
         <ion-col size="12" class="ion-no-padding">
-          <ion-img :src="assets/img/detalle_1.png"></ion-img>
+          <ion-row>
+            <ion-col *ngFor="let i of data?.imagenes" size="4" class="padding_derecha_izquierda_foto">
+              <ion-img [src]="i.url"></ion-img>
+            </ion-col>
+          </ion-row>
         </ion-col>
-        <ion-col size="12" class="padding_espacio_descrip ion-text-center">
-          <p class="descripcion_completo">A las 4:00 horas pasaremos a recogeros por vuestro hotel de Cusco para dirigirnos hacia el distrito de Cusipata, donde llegaremos después de dos horas y media de recorrido. Una vez en Cusipata, disfrutaremos de un rico desayuno de tipo buffet que nos dará la energía necesaria para afrontar el trekking por la Montaña Arcoíris. Una vez saciados, saldremos del restaurante hacia la zona de Wasipata, a la que llegaremos tras una hora de camino. ¡Será entonces cuando iniciaremos la ruta de trekking! Acompañados por el guía y siguiendo sus indicaciones, ascenderemos entre misteriosas montañas, mientras nos topamos con animales andinos como alpacas, ovejas y vicuñas.</p>
+        <ion-col size="12" class="padding_espacio_descrip">
+          <ion-text>
+            <h2 class="titulo_art ion-text-center">Itinerario</h2>
+          </ion-text>
+          <p class="descripn_largo">{{ data?.itinerario }}</p>
         </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col isze="12" class="ion-text-center padding_espacio_descrip">
-        <ion-text>
-          <h2 class="titulo_art">Distancias</h2>
-        </ion-text>
-      </ion-col>
-      <ion-col size="12" class="padding_espacio_descrip">
-        <p class="descripcion_completo">Cusco - Urubamba<br> 50 km, 1 hora en vehículo motorizado.<br><br> Urubamba - comunidad de Chichubamba 15 km, 30 min en vehículo motorizado.</p>
-      </ion-col>
-      <ion-col size="12" class="ion-no-padding">
-        <ion-row>
-          <ion-col size="4" class="padding_derecha_izquierda_foto">
-            <ion-img :src="assets/img/3e7ab869874850d162983f3c0674485d.png"></ion-img>
-          </ion-col>
-          <ion-col size="4" class="padding_derecha_izquierda_foto">
-            <ion-img :src="assets/img/3e7ab869874850d162983f3c0674485d.png"></ion-img>
-          </ion-col>
-          <ion-col size="4" class="padding_derecha_izquierda_foto">
-            <ion-img :src="assets/img/c0b8f22eea219a48ab35e28378e826fa.png"></ion-img>
-          </ion-col>
-          <ion-col size="4" class="padding_derecha_izquierda_foto">
-            <ion-img :src="assets/img/0cfd75d08b5424086eaba1a3020410db.png"></ion-img>
-          </ion-col>
-          <ion-col size="4" class="padding_derecha_izquierda_foto">
-            <ion-img :src="assets/img/9a219547f8ed30f255bf8a48bcc7cfc0.png"></ion-img>
-          </ion-col>
-          <ion-col size="4" class="padding_derecha_izquierda_foto">
-            <ion-img :src="assets/img/af568f1f1c1a8f132d6f1d69401ad31e.png"></ion-img>
-          </ion-col>
-        </ion-row>
-      </ion-col>
-      <ion-col size="12" class="padding_espacio_descrip">
-        <ion-text>
-          <h2 class="titulo_art ion-text-center">Itinerario</h2>
-        </ion-text>
-        <p class="descripn_largo">Recogida en el hotel y traslado de regreso al centro de Cusco. Guía en español. Transporte en minibús. Entrada a la Montaña de Colores. Desayuno y almuerzo tipo buffet. Bastones para trekking. Oxígeno de emergencia y equipo de primeros auxilios.</p>
-      </ion-col>
-      <ion-col size="12" class="padding_espacio_descrip">
-        <ion-text>
-          <h2 class="titulo_art ion-text-center">No incluye</h2>
-        </ion-text>
-        <p class="descripn_largo">Recogida en el hotel y traslado de regreso al centro de Cusco. Guía en español. Transporte en minibús. Entrada a la Montaña de Colores. Desayuno y almuerzo tipo buffet. Bastones para trekking. Oxígeno de emergencia y equipo de primeros auxilios.</p>
-      </ion-col>
-      <ion-col size="12" class="padding_espacio_descrip">
-        <ion-text>
-          <h2 class="titulo_art ion-text-center">Informes y reservas</h2>
-        </ion-text>
-        <p class="descripn_largo">Asociación de Agro artesanos Chuchubamba</p>
-        <ul class="list-none ion-no-padding" style="list-style-type:none;">
-          <li class="descripn_largo">
-            <ion-row>
+        <ion-col size="12" class="padding_espacio_descrip">
+          <ion-text>
+            <h2 class="titulo_art ion-text-center">Incluye</h2>
+          </ion-text>
+          <p class="descripn_largo">{{ data?.incluye }}</p>
+        </ion-col>
+        <ion-col size="12" class="padding_espacio_descrip">
+          <ion-text>
+            <h2 class="titulo_art ion-text-center">Informes y reservas</h2>
+          </ion-text>
+          <p class="descripn_largo">{{ data?.informes_reserva }}</p>
+          <ul class="list-none ion-no-padding" style="list-style-type:none;">
+            <li class="descripn_largo">
+              <ion-row>
+                <ion-col size="4" size-sm="2" size-xl="1" class="padding_derecha_cero">
+                  <span class="font_size_list">Teléfono:</span>
+                </ion-col>
+                <ion-col size="8" size-sm="10">
+                  <span class="font_size_list">{{ data?.telefono }}</span>
+                </ion-col>
+              </ion-row>
+              </li>
+            <li class="descripn_largo"><ion-row>
               <ion-col size="4" size-sm="2" size-xl="1" class="padding_derecha_cero">
-                <span class="font_size_list">Teléfono:</span>
+                <span class="font_size_list">E-Mail:</span>
               </ion-col>
               <ion-col size="8" size-sm="10">
-                <span class="font_size_list">084 746289</span>
+                <span class="font_size_list">{{ data?.email }}</span>
               </ion-col>
-            </ion-row>
-            </li>
-          <li class="descripn_largo"><ion-row>
-            <ion-col size="4" size-sm="2" size-xl="1" class="padding_derecha_cero">
-              <span class="font_size_list">E-Mail:</span>
-            </ion-col>
-            <ion-col size="8" size-sm="10">
-              <span class="font_size_list">Info@hotelazo.com</span>
-            </ion-col>
-          </ion-row></li>
-          <li class="descripn_largo"><ion-row>
-            <ion-col size="4" size-sm="2" size-xl="1" class="padding_derecha_cero">
-              <span class="font_size_list">Página Web:</span>
-            </ion-col>
-            <ion-col size="8" size-sm="10">
-              <span class="font_size_list">www.hotelazo.com</span>
-            </ion-col>
-          </ion-row></li>
-        </ul>
-      </ion-col>
-    </ion-row>
+            </ion-row></li>
+            <li class="descripn_largo"><ion-row>
+              <ion-col size="4" size-sm="2" size-xl="1" class="padding_derecha_cero">
+                <span class="font_size_list">Página Web:</span>
+              </ion-col>
+              <ion-col size="8" size-sm="10">
+                <span class="font_size_list">{{ data?.pagina_web }}</span>
+              </ion-col>
+            </ion-row></li>
+          </ul>
+        </ion-col>
+      </ion-row>
+    </div>
   </ion-grid>
 </ion-content>
 
