--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -11,7 +11,7 @@
         <ion-img :src="assets/img/Imagen-25.png"></ion-img>
       </ion-col>
       <ion-col size="2" size-sm="1" offset="5" offset-sm="8">
-        <button class="btn_menu">
+        <button class="btn_menu" (click)="open_menu ()">
           <div class="div_linea_color div_line_menu"></div>
           <div class="div_linea_color div_line_menu"></div>
           <div class="div_linea_color" id="div_line_menu_peque"></div>
