--- a/src/app/event-detail/event-detail.page.html
+++ b/src/app/event-detail/event-detail.page.html
@@ -9,7 +9,7 @@
     <ion-title>Event clendar</ion-title>
 
     <ion-buttons mode="md" slot="end">
-      <button class="btn_menu">
+      <button class="btn_menu" (click)="open_menu ()">
         <div class="div_linea_color div_line_menu"></div>
         <div class="div_linea_color div_line_menu"></div>
         <div class="div_linea_color" id="div_line_menu_peque"></div>
