--- a/src/app/boleto-turistico/boleto-turistico.page.scss
+++ b/src/app/boleto-turistico/boleto-turistico.page.scss
@@ -292,11 +292,11 @@ button:focus{
     border-radius: 50%;
     background-color: #B4B4B4;
     padding-top: 2px;
-    margin-top: 1rem;
+    margin-right: 10px;
 }
 .div_linea_color{
     height: 1px;
-    background-color: #ffffff;
+    background-color: #FFFFFF;
     margin-bottom: 3px;
 }
 .div_line_menu{
@@ -304,6 +304,24 @@ button:focus{
 }
 #div_line_menu_peque{
     width: 50%;
+}
+@media(min-width: 411px){
+    .btn_menu{
+        width: 29px;
+        height: 29px;
+    }
+    .div_linea_color{
+        height: 2px;
+    }
+}
+@media(min-width: 1024px){
+    .btn_menu{
+        width: 40px;
+        height: 40px;
+    }
+    .div_linea_color{
+        height: 4px;
+    }
 }
 
 .detalle {
