--- a/src/app/calendario/calendario.page.scss
+++ b/src/app/calendario/calendario.page.scss
@@ -86,24 +86,36 @@ ion-button {
     border-radius: 50%;
     background-color: #B4B4B4;
     padding-top: 2px;
-    /* margin-top: 1rem; */
-    margin: 6px 8px 0px 0px;
-    position: absolute;
-    right: 0;
-    top: 0;
+    margin-right: 10px;
 }
-
 .div_linea_color{
     height: 1px;
-    background-color: #ffffff;
+    background-color: #FFFFFF;
     margin-bottom: 3px;
 }
 .div_line_menu{
     width: 100%;
 }
-
 #div_line_menu_peque{
     width: 50%;
+}
+@media(min-width: 411px){
+    .btn_menu{
+        width: 29px;
+        height: 29px;
+    }
+    .div_linea_color{
+        height: 2px;
+    }
+}
+@media(min-width: 1024px){
+    .btn_menu{
+        width: 40px;
+        height: 40px;
+    }
+    .div_linea_color{
+        height: 4px;
+    }
 }
 #input_border_left{
     border-left: 1px solid #C4C4C4;
