--- a/src/app/contacto/contacto.page.scss
+++ b/src/app/contacto/contacto.page.scss
@@ -8,7 +8,7 @@
     border-radius: 50%;
     background-color: #ffffff;
     padding-top: 2px;
-    margin-top: 1rem;
+    margin-top: 5px;
 }
 .div_linea_color{
     height: 1px;
@@ -20,6 +20,24 @@
 }
 #div_line_menu_peque{
     width: 50%;
+}
+@media(min-width: 411px){
+    .btn_menu{
+        width: 29px;
+        height: 29px;
+    }
+    .div_linea_color{
+        height: 2px;
+    }
+}
+@media(min-width: 1024px){
+    .btn_menu{
+        width: 40px;
+        height: 40px;
+    }
+    .div_linea_color{
+        height: 4px;
+    }
 }
 #fondo_contac{
     --background: none;
