--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -30,7 +30,7 @@
               </button>
             </ion-col>
             <ion-col size="8" text-center class="ion-margin-bottom">
-              <p id="diciembre_year"><span id="mes_color">{{ get_current_date_format ("MMM") }}, </span><span id="year_number">{{ get_current_date_format ("YYYY") }}</span></p>
+              <p id="diciembre_year"><span id="mes_color">{{ get_current_date_format ("MMM") }} </span><span id="year_number">{{ get_current_date_format ("YYYY") }}</span></p>
             </ion-col>
             <ion-col size="2" text-center class="ion-margin-bottom">
               <button class="flechas_tamaño_calender padding_cero" (click)="change_month (+1)">
