--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -53,7 +53,7 @@
         <p class="color_number_direc">Been subject of<ion-text color="#818181"><i class="font_bolder">fraud</i></ion-text>? Have any <ion-text color="#818181"><i class="font_bolder">claims</i></ion-text> or want to <ion-text color="#818181"><i class="font_bolder">congratulate</i></ion-text> for an excellent service?</p>
       </ion-col>
       <ion-col size="8" size-sm="4" offset="2" offset-sm="4">
-        <button id="btn_rojo">Let us know</button>
+        <button id="btn_rojo" (click)="open_report ()">Let us know</button>
       </ion-col>
     </ion-row>
   </ion-grid>
