--- a/src/app/search-results/search-results.page.html
+++ b/src/app/search-results/search-results.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
   <ion-toolbar mode="ios">
     <ion-buttons slot="end">
-      <ion-button (click)="close ()" id="close-button">
+      <ion-button color="dark" (click)="close ()" id="close-button">
         <ion-icon slot="icon-only" name="close-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -88,12 +88,12 @@
                 <p id="color_negrita">How was your experience with this provider?</p>
                 <ion-row>
                   <ion-col size="6">
-                    <button class="btn_manos" id="like_bajo" (click)="on_click (item, 0)">
+                    <button class="btn_manos" id="like_bajo" (click)="open_report (item, 0)">
                       <ion-img :src="assets/img/Imagen_38.png"></ion-img>
                     </button>
                   </ion-col>
                   <ion-col size="6">
-                    <button class="btn_manos" (click)="on_click (item, 1)">
+                    <button class="btn_manos" (click)="open_report (item, 1)">
                       <ion-img :src="assets/img/Imagen_39.png"></ion-img>
                     </button>
                   </ion-col>
@@ -141,12 +141,12 @@
                 <p id="color_negrita">How was your experience with this provider?</p>
                 <ion-row>
                   <ion-col size="6">
-                    <button class="btn_manos" id="like_bajo" (click)="on_click (item, 0)">
+                    <button class="btn_manos" id="like_bajo" (click)="open_report (item, 0)">
                       <ion-img :src="assets/img/Imagen_38.png"></ion-img>
                     </button>
                   </ion-col>
                   <ion-col size="6">
-                    <button class="btn_manos" (click)="on_click (item, 1)">
+                    <button class="btn_manos" (click)="open_report (item, 1)">
                       <ion-img :src="assets/img/Imagen_39.png"></ion-img>
                     </button>
                   </ion-col>
@@ -188,12 +188,12 @@
                 <p id="color_negrita">How was your experience with this provider?</p>
                 <ion-row>
                   <ion-col size="6">
-                    <button class="btn_manos" id="like_bajo" (click)="on_click (item, 0)">
+                    <button class="btn_manos" id="like_bajo" (click)="open_report (item, 0)">
                       <ion-img :src="assets/img/Imagen_38.png"></ion-img>
                     </button>
                   </ion-col>
                   <ion-col size="6">
-                    <button class="btn_manos" (click)="on_click (item, 1)">
+                    <button class="btn_manos" (click)="open_report (item, 1)">
                       <ion-img :src="assets/img/Imagen_39.png"></ion-img>
                     </button>
                   </ion-col>
@@ -241,12 +241,12 @@
                 <p id="color_negrita">How was your experience with this provider?</p>
                 <ion-row>
                   <ion-col size="6">
-                    <button class="btn_manos" id="like_bajo" (click)="on_click (item, 0)">
+                    <button class="btn_manos" id="like_bajo" (click)="open_report (item, 0)">
                       <ion-img :src="assets/img/Imagen_38.png"></ion-img>
                     </button>
                   </ion-col>
                   <ion-col size="6">
-                    <button class="btn_manos" (click)="on_click (item, 1)">
+                    <button class="btn_manos" (click)="open_report (item, 1)">
                       <ion-img :src="assets/img/Imagen_39.png"></ion-img>
                     </button>
                   </ion-col>
