--- a/src/app/energency-direct/energency-direct.page.html
+++ b/src/app/energency-direct/energency-direct.page.html
@@ -67,7 +67,7 @@
         </ion-text>
       </ion-col>
       <ion-col size="10" size-sm="4" offset="1" offset-sm="4">
-        <button id="btn_rojo">Let us know</button>
+        <button id="btn_rojo" (click)="open_report ()">Let us know</button>
       </ion-col>
     </ion-row>
     <ion-img :src="assets/img/Grupo_404.png"></ion-img>
