--- a/src/app/blog/blog.page.scss
+++ b/src/app/blog/blog.page.scss
@@ -180,4 +180,7 @@ ion-card{
         padding-left: 7px;
         padding-right: 7px;
     }
+    .alturar_igualar{
+        height: 100%;
+    }
 }
