--- a/src/app/calendario/calendario.page.scss
+++ b/src/app/calendario/calendario.page.scss
@@ -560,3 +560,9 @@ button:focus{
 #nada-h1-margin {
     margin-bottom: 0.5rem;
 }
+ion-card{
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    margin-bottom: -7px;
+}
