--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -36,19 +36,19 @@
     <ion-row>
       <ion-col size="12" class="ion-text-center padding_espacio" id="bajar_border">
         <ion-text>
-          <h2 class="titulo_art ">Find us</h2>
+          <h2 class="color_titulos ">Find us</h2>
         </ion-text>
         <p class="color_number_direc">Plaza Túpac Amaru Mz. Lote 2 , Wanchaq, Cusco, 3rd floor.</p>
         <ion-img :src="assets/img/2462836393e5ddb12e855df06c422bf8.png" id="img_map"></ion-img>
         <ion-text>
-          <h2 class="titulo_art ">Or Call</h2>
+          <h2 class="color_titulos ">Or Call</h2>
         </ion-text>
         <p class="color_number_direc">+51 (84) 223761</p>
         <div id="linea_larga"></div>
       </ion-col>
       <ion-col size="12" class="padding_espacio ion-text-center">
         <ion-text>
-          <h2 class="titulo_art ">Find us</h2>
+          <h2 class="color_titulos ">Find us</h2>
         </ion-text>
         <p class="color_number_direc">Been subject of<ion-text color="#818181"><i class="font_bolder">fraud</i></ion-text>? Have any <ion-text color="#818181"><i class="font_bolder">claims</i></ion-text> or want to <ion-text color="#818181"><i class="font_bolder">congratulate</i></ion-text> for an excellent service?</p>
       </ion-col>
