--- a/src/app/event-detail/event-detail.page.html
+++ b/src/app/event-detail/event-detail.page.html
@@ -33,7 +33,7 @@
 
     <ion-row *ngIf="is_loading === false">
       <ion-col size="12" class="padding_left_right_todos">
-        <h2 class="color_65 font_bolder">{{ evento?.titulo }}</h2>
+        <h2 class="color_titulos font_bolder">{{ evento?.titulo }}</h2>
         <p class="color_65">{{ evento?.tipo.nombre }}</p>
       </ion-col>
       <ion-col size="12" class="padding_left_right_todos">
@@ -66,7 +66,7 @@
     <ion-row>
       <ion-col size="12">
         <ion-text>
-          <h2 class="ion-text-center" id="titulo_calender">Upcoming events</h2>
+          <h2 class="ion-text-center color_titulos">Upcoming events</h2>
         </ion-text>
       </ion-col>
       <ion-col size="12">
