--- a/src/app/blog-articulo/blog-articulo.page.scss
+++ b/src/app/blog-articulo/blog-articulo.page.scss
@@ -47,15 +47,35 @@
     padding-right: 0px;
     padding-left: 1px;
 }
-.titulo_art{
+.color_titulos{
     color: #656565;
-    font-weight: 900;
-    font-size: 22px;
+    font-weight: bolder;
+    font-size: 21px;
 }
 @media(min-width: 360px){
-    .titulo_art{
-        font-size: 25px;
-    }
+    .color_titulos{
+        font-size: 1.5rem;
+    }  
+}
+@media(min-width: 411px){
+    .color_titulos{
+        font-size: 29px;
+    }  
+}
+@media(min-width: 411px){
+    .color_titulos{
+        font-size: 29px;
+    }  
+}
+@media(min-width: 480px){
+    .color_titulos{
+        font-size: 32px;
+    }  
+}
+@media(min-width: 1024px){
+    .color_titulos{
+        font-size: 50px;
+    }  
 }
 .pequeño_blog{
     color: #818181;
