--- a/src/app/boleto-turistico/boleto-turistico.page.scss
+++ b/src/app/boleto-turistico/boleto-turistico.page.scss
@@ -1,19 +1,38 @@
 .color_titulos{
     color: #656565;
-    font-weight: 700;
-    font-size: 1.375rem;
-    margin-bottom: 18px;
+    font-weight: bolder;
+    font-size: 21px;
 }
 @media(min-width: 360px){
     .color_titulos{
-        font-size: 1.875rem;
-    }
+        font-size: 1.5rem;
+    }  
+}
+@media(min-width: 411px){
+    .color_titulos{
+        font-size: 29px;
+    }  
+}
+@media(min-width: 411px){
+    .color_titulos{
+        font-size: 29px;
+    }  
+}
+@media(min-width: 480px){
+    .color_titulos{
+        font-size: 32px;
+    }  
+}
+@media(min-width: 1024px){
+    .color_titulos{
+        font-size: 50px;
+    }  
 }
 .color_81{
     color: #818181;
 }
 .texto_espaciados{
-    line-height: 1.6;
+    line-height: 1.3;
     font-weight: 100;
 }
 .padding_espacio{
@@ -30,58 +49,103 @@
     padding-bottom: 10px;
     padding-left: 15px;
     padding-right: 15px;
-}
-@media(min-width: 411px){
-    #fondo_select{
-        padding-left: 40px;
-        padding-right: 40px;
-    }
-}
-@media(min-width: 480px){
-    #fondo_select{
-        padding-left: 60px;
-        padding-right: 60px;
-    }
-}
-@media(min-width: 568px){
-    #fondo_select{
-        padding-left: 90px;
-        padding-right: 90px;
-    }
-}
-@media(min-width: 640px){
-    #fondo_select{
-        padding-left: 120px;
-        padding-right: 120px;
-    }
-}
-@media(min-width: 768px){
-    #fondo_select{
-        padding-left: 150px;
-        padding-right: 150px;
-    }
-}
-@media(min-width: 1024px){
-    #fondo_select{
-        padding-left: 240px;
-        padding-right: 240px;
-    }
-}
-@media(min-width: 1366px){
-    #fondo_select{
-        padding-left: 350px;
-        padding-right: 350px;
-    }
+    margin-top: 178px;
 }
 #fondo_select::before{
     content:'';
 	position: absolute;
 	left: 0;
     right: 0;
-    height: 100%;
+    height: 107%;
     background-color: #ffffffad;
     margin-top: -10px;
 }
+@media(min-width: 360px){
+    #fondo_select{
+        margin-top: 205px;
+    }
+}
+@media(min-width: 411px){
+    #fondo_select{
+        padding-left: 40px;
+        padding-right: 40px;
+        margin-top: 243px;
+    }
+}
+@media(min-width: 480px){
+    #fondo_select{
+        padding-left: 60px;
+        padding-right: 60px;
+        margin-top: 290px;
+    }
+}
+@media(min-width: 568px){
+    #fondo_select{
+        padding-left: 90px;
+        padding-right: 90px;
+        margin-top: 356px;
+    }
+}
+@media(min-width: 640px){
+    #fondo_select{
+        padding-left: 120px;
+        padding-right: 120px;
+        margin-top: 409px;
+    }
+}
+@media(min-width: 667px){
+    #fondo_select{
+        margin-top: 424px;
+    }
+}
+@media(min-width: 731px){
+    #fondo_select{
+        margin-top: 470px;
+    }
+}
+@media(min-width: 768px){
+    #fondo_select{
+        padding-left: 150px;
+        padding-right: 150px;
+        margin-top: 497px;
+    }
+}
+@media(min-width: 812px){
+    #fondo_select{
+        margin-top: 526px;
+    }
+}
+@media(min-width: 854px){
+    #fondo_select{
+        margin-top: 555px;
+    }
+}
+@media(min-width: 1024px){
+    #fondo_select{
+        padding-left: 240px;
+        padding-right: 240px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+        margin-top: 689px;
+    }
+    #fondo_select::before{
+        content:'';
+        position: absolute;
+        left: 0;
+        right: 0;
+        height: 107%;
+        background-color: #ffffffad;
+        margin-top: -60px;
+    }
+}
+@media(min-width: 1366px){
+    #fondo_select{
+        padding-left: 350px;
+        padding-right: 350px;
+        margin-top: 933px;
+    }
+}
+
 ion-select{
     background-color: #ffffff;
     border-radius: 10px;
@@ -234,6 +298,7 @@ ion-card{
     background-color: #3E729A;
     height: 5.625rem;
 }
+
 #decripcion_ultimo{
     color: #ffffff;
     font-weight: 100;
@@ -255,9 +320,6 @@ ion-card{
 button:focus{
     outline:none;
     box-shadow:none;
-}
-#ocultar_img{
-    display: block;
 }
 @media(min-width: 640px){
     #ocultar_img{
@@ -327,4 +389,15 @@ button:focus{
 .detalle {
     padding-left: 1rem;
     padding-top: 0.5rem;
+}
+.img_boleto{
+    position: absolute;
+    z-index: 9999;
+    top: -11px;
+    width: 100%;
+}
+@media(min-width: 1024px){
+    .img_boleto{
+        top: 17px;
+    }
 }
