--- a/src/app/event-detail/event-detail.page.scss
+++ b/src/app/event-detail/event-detail.page.scss
@@ -74,7 +74,6 @@ button:focus{
 }
 .font_bolder{
     font-weight: 900;
-    font-size: 21px;
 }
 .color_81_pau{
     color: #818181;
@@ -83,9 +82,6 @@ button:focus{
     padding-left: 10px;
 }
 @media(min-width: 360px){
-    .font_bolder{
-        font-size: 24px;
-    }
     .color_81_pau{
         font-size: 16px;
     }
@@ -389,4 +385,34 @@ button:focus{
     color: #818181;
     margin-top: 15px;
     margin-bottom: 15px;
+}
+.color_titulos{
+    color: #656565;
+    font-weight: bolder;
+    font-size: 21px;
+}
+@media(min-width: 360px){
+    .color_titulos{
+        font-size: 1.5rem;
+    }  
+}
+@media(min-width: 411px){
+    .color_titulos{
+        font-size: 29px;
+    }  
+}
+@media(min-width: 411px){
+    .color_titulos{
+        font-size: 29px;
+    }  
+}
+@media(min-width: 480px){
+    .color_titulos{
+        font-size: 32px;
+    }  
+}
+@media(min-width: 1024px){
+    .color_titulos{
+        font-size: 50px;
+    }  
 }
