--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -174,13 +174,38 @@ button:focus{
     outline:none;
     box-shadow:none;
 }
-.color_65_titulos{
+.color_titulos{
     color: #656565;
-    font-weight: 700;
-    font-size: 1.675rem;
+    font-weight: bolder;
+    font-size: 21px;
+}
+@media(min-width: 360px){
+    .color_titulos{
+        font-size: 1.5rem;
+    }  
+}
+@media(min-width: 411px){
+    .color_titulos{
+        font-size: 29px;
+    }  
+}
+@media(min-width: 411px){
+    .color_titulos{
+        font-size: 29px;
+    }  
+}
+@media(min-width: 480px){
+    .color_titulos{
+        font-size: 32px;
+    }  
+}
+@media(min-width: 1024px){
+    .color_titulos{
+        font-size: 50px;
+    }  
 }
 .espaciados_texto{
-    line-height: 1.6;
+    line-height: 1.3;
 }
 .lineas_texto_noticia{
     display: -webkit-box;
@@ -244,7 +269,7 @@ button:focus{
 }
 #subir_img_bloeto{
     margin-top: -62px;
-    margin-left: -72px;
+    margin-left: -6px;
     width: 100%;
 }
 @media(min-width: 568px){
@@ -311,14 +336,14 @@ button:focus{
 }
 @media(min-width: 768px){
     .flechas_tamaño_calender{
-        margin-top: 1.6875rem;
+        margin-top: 3px;
         width: 19%;
         height: 44%;
     } 
 }
 @media(min-width: 1024px){
     .flechas_tamaño_calender{
-        margin-top: 35px;
+        margin-top: 0px;
         width: 26%;
         height: 2.8125rem;
     } 
@@ -525,8 +550,7 @@ button:focus{
     padding-bottom: 15px;
     border-radius: 13px;
     color: #818181;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 35px;
 }
 .padding_eventos{
     padding: 0;
@@ -545,7 +569,10 @@ button:focus{
     margin-bottom: 0.5rem;
 }
 ion-card{
-    margin: 0;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    margin-bottom: -7px;
 }
 ion-card-content{
     padding-left: 10px;
@@ -724,4 +751,8 @@ ion-card-content{
         font-size: 13px;
         border-radius: 15px;
     }
+}
+.habrir_espacios{
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
