--- a/src/app/trc-detalle/trc-detalle.page.html
+++ b/src/app/trc-detalle/trc-detalle.page.html
@@ -41,7 +41,7 @@
     <div *ngIf="is_loading === false">
       <ion-row>
         <ion-col size="12" class="padding_espacio_descrip">
-          <h1 class="titulo_art ion-text-lg-center">{{ data?.nombre }}</h1>
+          <h1 class="color_titulos ion-text-lg-center">{{ data?.nombre }}</h1>
           <p class="descrip_pequeña margin_bottom">{{ data?.donde }}</p>
           <p class="numero_color">{{ data?.altitud }}</p>
         </ion-col>
@@ -66,7 +66,7 @@
       <ion-row>
         <ion-col isze="12" class="ion-text-center padding_espacio_descrip">
           <ion-text>
-            <h2 class="titulo_art">Distancia</h2>
+            <h2 class="color_titulos">Distancia</h2>
           </ion-text>
         </ion-col>
   
@@ -83,19 +83,19 @@
         </ion-col>
         <ion-col size="12" class="padding_espacio_descrip">
           <ion-text>
-            <h2 class="titulo_art ion-text-center">Itinerario</h2>
+            <h2 class="color_titulos ion-text-center">Itinerario</h2>
           </ion-text>
           <p class="descripn_largo">{{ data?.itinerario }}</p>
         </ion-col>
         <ion-col size="12" class="padding_espacio_descrip">
           <ion-text>
-            <h2 class="titulo_art ion-text-center">Incluye</h2>
+            <h2 class="color_titulos ion-text-center">Incluye</h2>
           </ion-text>
           <p class="descripn_largo">{{ data?.incluye }}</p>
         </ion-col>
         <ion-col size="12" class="padding_espacio_descrip">
           <ion-text>
-            <h2 class="titulo_art ion-text-center">Informes y reservas</h2>
+            <h2 class="color_titulos ion-text-center">Informes y reservas</h2>
           </ion-text>
           <p class="descripn_largo">{{ data?.informes_reserva }}</p>
           <ul class="list-none ion-no-padding" style="list-style-type:none;">
