--- a/src/app/trc/trc.page.html
+++ b/src/app/trc/trc.page.html
@@ -35,7 +35,7 @@
     </ion-row>-->
     <ion-row>
       <ion-col size="12" class="padding_espacio_descrip">
-        <h1 class="titulo_art ion-text-lg-center">Turistical circuites in Cusco</h1>
+        <h1 class="color_titulos ion-text-lg-center">Turistical circuites in Cusco</h1>
         <p class="descrip_color">La Dirección de Artesanía, es un Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
       </ion-col>
       
