Arreglando el menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,34 +23,45 @@
             <ion-label class="color_menu">Tourístic circuits</ion-label>
           </ion-item>
         </ion-menu-toggle>
+
         <div></div>
         <ion-menu-toggle auto-hide="false">
+          <ion-item (click)="go_page ('boleto-turistico')" class="ion-text-center"><ion-label class="color_menu">Touristic ticket</ion-label></ion-item>
         </ion-menu-toggle>
+
         <div></div>
         <ion-menu-toggle auto-hide="false">
           <ion-item (click)="go_page ('blog')" class="ion-text-center"><ion-label class="color_menu">News and articles</ion-label></ion-item>
         </ion-menu-toggle>
+
         <div></div>
         <ion-menu-toggle auto-hide="false">
           <ion-item (click)="go_page ('trc')" class="ion-text-center"><ion-label class="color_menu">Rural turism</ion-label></ion-item>
         </ion-menu-toggle>
+
         <div></div>
         <ion-menu-toggle auto-hide="false">
           <ion-item (click)="go_page ('calendario')" class="ion-text-center"><ion-label class="color_menu">Cusco calendar</ion-label></ion-item>
         </ion-menu-toggle>
+
         <div></div>
         <ion-menu-toggle auto-hide="false">
+          <ion-item (click)="go_page ('energency-direct')" class="ion-text-center"><ion-label class="color_menu">Cusco emergency directory</ion-label></ion-item>
         </ion-menu-toggle>
+
         <div></div>
         <ion-menu-toggle auto-hide="false">
-          
+          <ion-item (click)="go_page ('contacto')" class="ion-text-center"><ion-label class="color_menu">Contacto</ion-label></ion-item>
         </ion-menu-toggle>
+
         <div></div>
         <ion-menu-toggle auto-hide="false">
-          
+          <ion-item (click)="presentAlertRadio ()" class="ion-text-center"><ion-label class="color_menu">Change language</ion-label></ion-item>
         </ion-menu-toggle>
+
         <div></div>
         <ion-menu-toggle auto-hide="false">
+          <ion-item (click)="go_page ('creditos')" class="ion-text-center"><ion-label class="color_menu">Credits</ion-label></ion-item>
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
